[package]
name = "zenlesszonezero-music-visualizer"
version = "0.1.1"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant"
    ] }
anyhow = "1.0.100"
rustfft = "6.4.1"
wgpu = "27.0.1"
winit = "0.30.12"
pollster = "0.4.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
once_cell = "1.21.3"

